--- a/web designing/style.css
+++ b/web designing/style.css
@@ -75,16 +75,25 @@ table {
  border-spacing:0;
 }
 /* change border colour to suit your needs */
+body{
+    background-color: cadetblue;
+}
+nav{
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    line-height: 100px;
+}
 
 ul{
-
+     
 }
 
 ul li{
     list-style: circle;
     display: inline-block;
     float: left;
-    line-height: 150px;
+    line-height: 150px;  
 
 }
 
@@ -93,5 +102,6 @@ ul li a {
     font-size: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: darkgray;
-    padding: 60px;
+    padding: 10px 40px;
+    display: block;
 }
